--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: Prototype, local: true do |f|%>
+<%= form_with model: prototype, local: true do |f|%>
   <div class="field">
     <%= f.label :prototype, "プロトタイプの名称" %><br />
     <%= f.text_field :prototype, id:"prototype_title" %>
