--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <%# <%= link_to image_tag("プロトタイプの画像", class: :card__img ), root_path%>
   <div class="card__body">
-    <%# <%= link_to "プロトタイプのタイトル", root_path, class: :card__title%> 
+    <%= link_to prototype.prototype, root_path, class: :card__title%> 
     <p class="card__summary">
       <%= "プロトタイプのキャッチコピー" %>
     </p>
