--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -7,9 +7,7 @@
       <%# </div> %>
     <%# // ログインしているときは上記を表示する %>
     <div class="card__wrapper">
-      <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
-      <%= render partial: "prototype", locals: { prototype: @prototype } %>
-      <%# renderの引数。デプロイ実装(6/22)時点ではNameErrorのためコメントアウト %>
+      <%= render partial: "prototype", collection: @prototypes %>
     </div>
   </div>
 </main>
