一覧機能文字は出せた

--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -3,8 +3,8 @@
   <div class="card__body">
     <%= link_to prototype.prototype, root_path, class: :card__title%> 
     <p class="card__summary">
-      <%= "プロトタイプのキャッチコピー" %>
+      <%= link_to prototype.catch_copy, root_path %>
     </p>
-    <%# <%= link_to "by プロトタイプの投稿者名", root_path, class: :card__user %> 
+     <%=  link_to prototype.name, root_path, class: :card__user %> 
   </div>
 </div>
