--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,4 +1,5 @@
 <div class="card">
+    <%= image_tag prototype.image, class: :card__img if prototype.image.attached? %>
   <%# <%= link_to image_tag("プロトタイプの画像", class: :card__img ), root_path%>
   <div class="card__body">
     <%= link_to prototype.prototype, root_path, class: :card__title%> 
