--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,8 +21,8 @@
         </div>
 
         <div class="field">
-          <%= f.label :user_name, "ユーザー名" %><br />
-          <%= f.text_field :user_name, id:"user_name" %>
+          <%= f.label :name, "ユーザー名" %><br />
+          <%= f.text_field :name, id:"user_name" %>
         </div>
 
         <div class="field">
@@ -31,13 +31,13 @@
         </div>
 
         <div class="field">
-          <%= f.label :affiliation, "所属" %><br />
-          <%= f.text_area :affiliation, class: :form__text, id:"user_occupation" %>
+          <%= f.label :occupation, "所属" %><br />
+          <%= f.text_area :occupation, class: :form__text, id:"user_occupation" %>
         </div>
 
         <div class="field">
-          <%= f.label :job_title, "役職" %><br />
-          <%= f.text_area :job_title, class: :form__text, id:"user_position" %>
+          <%= f.label :position, "役職" %><br />
+          <%= f.text_area :position, class: :form__text, id:"user_position" %>
         </div>
 
         <div class="actions">
