--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: prototype, local: true do |f|%>
   <div class="field">
-    <%= f.label :prototype, "プロトタイプの名称" %><br />
-    <%= f.text_field :prototype, id:"prototype_title" %>
+    <%= f.label :title, "プロトタイプの名称" %><br />
+    <%= f.text_field :title, id:"prototype_title" %>
   </div>
 
   <div class="field">
