--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
-    <%= image_tag prototype.image, class: :card__img if prototype.image.attached? %>
+    <%= link_to image_tag(prototype.image, class: :card__img ), prototype_path(prototype.id) %>
   <div class="card__body">
-    <%= link_to prototype.title, root_path, class: :card__title%> 
+    <%= link_to prototype.title, prototype_path(prototype.id), class: :card__title%> 
     <p class="card__summary">
       <%= link_to prototype.catch_copy, root_path %>
     </p>
