バックサイド実装

--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -15,7 +15,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :image, prototype.image %><br />
+    <%= f.label :image, "プロトタイプの画像" %><br />
     <%= f.file_field :image, id:"prototype_image" %>
   </div>
 
