--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -3,8 +3,8 @@
   <div class="card__body">
     <%= link_to prototype.title, prototype_path(prototype.id), class: :card__title%> 
     <p class="card__summary">
-      <%= link_to prototype.catch_copy, root_path %>
+      <%= link_to prototype.catch_copy, prototype_path(prototype.id) %>
     </p>
-     <%=  link_to prototype.user.name, root_path, class: :card__user %> 
+     <%=  link_to prototype.user.name, user_path(prototype.user_id), class: :card__user %> 
   </div>
 </div>
