--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,37 +2,37 @@
   <div class="inner">
     <div class="user__wrapper">
       <h2 class="page-heading">
-        <%= @user.name %>の情報
+        <%= @name %>の情報
       </h2>
       <table class="table">
         <tbody>
           <tr>
             <th class="table__col1">名前</th>
-            <td class="table__col2"><%= @user.name %></td>
+            <td class="table__col2"><%= @name %></td>
           </tr>
           <tr>
             <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= @user.profile %></td>
+            <td class="table__col2"><%= @profile %></td>
           </tr>
           <tr>
             <th class="table__col1">所属</th>
-            <td class="table__col2"><%= @user.affiliation %></td>
+            <td class="table__col2"><%= @occupation %></td>
           </tr>
           <tr>
             <th class="table__col1">役職</th>
-            <td class="table__col2"><%= @user.position %></td>
+            <td class="table__col2"><%= @position %></td>
           </tr>
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= @user.name %>のプロトタイプ
+        <%= @name %>のプロトタイプ
       </h2>
       <div class="user__card">
         <% @prototypes.each do |prototype| %>
           <div class="prototype">
-            <h3><%= prototype.name %></h3>
+            <h3><%= prototype.title %></h3>
             <p><strong>投稿者:</strong> <%= prototype.user.name %></p>
-            <p><strong>画像:</strong> <%= image_tag prototype.image_url %></p>
+            <p><strong>画像:</strong> <%= image_tag prototype.image %></p>
             <p><strong>キャッチコピー:</strong> <%= prototype.catch_copy %></p>
             <p><strong>コンセプト:</strong> <%= prototype.concept %></p>
           </div>
